# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: github-actions.yml
gendiff/: diff.py  parsers.py
gendiff/scripts/: gendiff.py
tests/: gendiff_tests.py  test_gendiff.py
tests/fixtures/: file1.yaml  right_json_format.txt
